syntax = "proto3";
package message;

option go_package = "message/v1;message";

//import "validate/validate.proto";
import "tagger/tagger.proto";

message MessageReceiver{
  int32 talk_type = 1;
  int32 receiver_id = 2;
}

// 文本消息
message TextMessageRequest{

  message Mention{
    int32 all = 1;
    repeated int32 uids = 2;
  }

  int32 type = 1;
  string content = 2;
  Mention mention = 3;
  MessageReceiver receiver = 4;// 消息接收者
}

// 代码消息
message ImageMessageRequest{
  int32 type = 1;
  string url = 2; // 图片地址
  int32 width = 3; // 图片宽度
  int32 height = 4; // 图片高度
  int32 size = 5; // 图片大小
  MessageReceiver receiver = 6;// 消息接收者
}

// 语音消息
message VoiceMessageRequest{
  int32 type = 1;
  string url = 2 [(tagger.tags) = "binding:\"required\""];
  int32 duration = 3 [(tagger.tags) = "binding:\"required,gt=0\""];
  int32 size = 4; // 图片大小
  MessageReceiver receiver = 5;// 消息接收者
}

// 视频文件消息
message VideoMessageRequest{
  int32 type = 1;
  string url = 2 [(tagger.tags) = "binding:\"required\""];
  int32 duration = 3 [(tagger.tags) = "binding:\"required,gt=0\""];
  int32 size = 4; // 图片大小
  MessageReceiver receiver = 5;// 消息接收者
}

// 文件消息
message FileMessageRequest{
  int32 type = 1;
  string upload_id = 2 [(tagger.tags) = "binding:\"required\""];
  MessageReceiver receiver = 5;// 消息接收者
}

// 代码消息
message CodeMessageRequest{
  int32 type = 1;
  string lang = 2 [(tagger.tags) = "binding:\"required\""];
  string code = 3 [(tagger.tags) = "binding:\"required\""];
  MessageReceiver receiver = 5;// 消息接收者
}

// 代码消息
message LocationMessageRequest{
  int32 type = 1;
  string longitude = 2 [(tagger.tags) = "binding:\"required\""];  // 地理位置 经度
  string latitude = 3; // 地理位置 纬度
  string description = 4; // 位置描述
  MessageReceiver receiver = 5;// 消息接收者
}

// 转发消息
message ForwardMessageRequest{
  int32 type = 1;   // 对话类型
  int32 mode = 2;   // 转发模式
  repeated int32 message_ids = 3;  // 消息ID
  repeated int32 gids = 4; // 群ID列表
  repeated int32 uids = 5; // 好友ID列表
  MessageReceiver receiver = 6;// 消息接收者
}

// 投票消息
message VoteMessageRequest{
  int32 type = 1;
  string title = 2 [(tagger.tags) = "binding:\"required\""];  // 标题
  int32 mode = 3; // 投票模式
  int32 anonymous = 4; // 匿名投票
  repeated string Options = 5; // 投票选项
  MessageReceiver receiver = 6;// 消息接收者
}

// 登录消息
message LoginMessageRequest{
  string ip = 1;
  string address = 2;
  string platform = 3;
  string agent = 4;
  string reason = 5;
}

// 表情消息
message EmoticonMessageRequest{
  int32 type = 1;
  int32 emoticon_id = 2; // 投票模式
  MessageReceiver receiver = 3;// 消息接收者
}