syntax = "proto3";
package web;

option go_package = "web/v1;web";

import "validate/validate.proto";

message GroupApplyCreateRequest{
  int32 group_id = 1 [(validate.rules).int32.gte = 1];
  string remark = 2 [(validate.rules).string.min_len = 1];
}

message GroupApplyCreateResponse{}


message GroupApplyDeleteRequest{
  int32 apply_id = 1 [(validate.rules).int32.gte = 1];
}

message GroupApplyDeleteResponse{}


message GroupApplyAgreeRequest{
  int32 apply_id = 1 [(validate.rules).int32.gte = 1];
}

message GroupApplyAgreeResponse{}


message GroupApplyDeclineRequest{
  int32 apply_id = 1 [(validate.rules).int32.gte = 1];
  string remark = 2 [(validate.rules).string.min_len = 1];
}

message GroupApplyDeclineResponse{}

message GroupApplyListRequest{
  int32 group_id = 1 [(validate.rules).int32.gte = 1];
}

message GroupApplyListResponse{

  message Item{
    int32 id = 1;
    int32 user_id = 2;
    int32 group_id = 3;
    string remark = 4;
    string avatar = 5;
    string nickname = 6;
    string created_at = 7;
  }

  repeated Item items = 1;
}

message GroupApplyAllResponse{

  message Item{
    int32 id = 1;
    int32 user_id = 2;
    int32 group_id = 3;
    string group_name = 4;
    string remark = 5;
    string avatar = 6;
    string nickname = 7;
    string created_at = 8;
  }

  repeated Item items = 1;
}